testsuite/tests/indexed-types/should_fail/T2203a.stderr

T2203a.hs:13:19: error:
    • Illegal type synonym family application ‘TheFoo a’ in instance:
        Bar (Either a (TheFoo a))
    • In the instance declaration for ‘Bar (Either a (TheFoo a))’
